--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  font_awesome_flutter: 9.2.0
+  material_floating_search_bar: ^0.3.6
+  url_launcher: 6.0.10
   geolocator: ^8.0.5
   google_maps_flutter: 2.0.9
   pin_code_fields: ^7.3.0
@@ -52,8 +55,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
